--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"reading-time": "^1.5.0",
 		"remark-unwrap-images": "^4.0.0",
+		"sass-embedded": "^1.81.0",
 		"tailwindcss": "^3.4.13",
 		"typescript": "^5.6.2"
 	}
