Added 3D Particles Bubble

--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
 	},
 	"dependencies": {
 		"@astrojs/mdx": "3.1.7",
+		"@astrojs/react": "^3.6.3",
 		"@astrojs/rss": "4.0.7",
 		"@astrojs/sitemap": "3.2.0",
 		"@astrojs/tailwind": "5.1.1",
+		"@react-three/drei": "^9.117.3",
+		"@react-three/fiber": "^8.17.10",
+		"@types/three": "^0.170.0",
 		"astro": "4.15.12",
 		"astro-expressive-code": "^0.37.0",
 		"astro-icon": "^1.1.1",
@@ -32,12 +36,15 @@
 		"mdast-util-directive": "^3.0.0",
 		"mdast-util-to-markdown": "^2.1.0",
 		"mdast-util-to-string": "^4.0.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"rehype-external-links": "^3.0.0",
 		"remark-directive": "^3.0.0",
 		"satori": "0.11.2",
 		"satori-html": "^0.3.2",
 		"sharp": "^0.33.5",
 		"tailwind-merge": "^2.5.4",
+		"three": "^0.170.0",
 		"unified": "^11.0.5",
 		"unist-util-visit": "^5.0.0"
 	},
@@ -50,6 +57,8 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/hast": "^3.0.4",
 		"@types/mdast": "^4.0.4",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
 		"@types/tailwindcss": "^3.1.0",
 		"autoprefixer": "^10.4.20",
 		"pagefind": "^1.1.1",
